Fixed a bug causing the bottom part to overlap with IOS chrome navigation

--- a/BOTCT/css/modal.css
+++ b/BOTCT/css/modal.css
@@ -14,7 +14,7 @@
 .modal-content {
     position: absolute;
 
-    top: 5vh;
+    top: 1vh;
     left: 2.5vw;
     width: 95vw;
     height: 90vh;
